Minor alignment fix
git-svn-id: svn://dev.anidb.net/svn/trunk@159 bed53a55-4da3-433c-baf4-d4f70f2fd34a

--- a/css/anidbstyle-dongato/anidbstyle-dongato.css
+++ b/css/anidbstyle-dongato/anidbstyle-dongato.css
@@ -3012,7 +3012,8 @@ div.export_all div
 
 div.g_info,
 div.export_action,
-div.animeatt_info ul
+div.animeatt_info ul,
+div.add_done ul
 {
 	text-align: center;
 }
